package ar.edu.utn.frba.dds;

import ar.edu.utn.frba.dds.prenda.Prenda;

public class Atuendo {
  private Prenda prendaTorso;
  private Prenda prendaPiernas;
  private Prenda prendaPies;

  public Atuendo(Prenda prendaTorso, Prenda prendaPiernas, Prenda prendaPies) {
    this.prendaTorso = prendaTorso;
    this.prendaPiernas = prendaPiernas;
    this.prendaPies = prendaPies;
  }


}
