package ar.edu.utn.frba.dds;

/**
 .com
 */
public class Color {

  /**
   .com
   */
  public Color(Integer rojo, Integer verde, Integer azul) {
  }
}
