package ar.edu.utn.frba.dds.QMP;

public enum Material {
    TELA, JEAN, ALGODON, CUERO;
}
