package ar.edu.utn.frba.dds.QMP;

public class TipoDePrenda {
    public Categoria categoria;

    public TipoDePrenda(Categoria categoria) {
        this.categoria = categoria;
    }
}
