package ar.edu.utn.frba.dds.QMP;

public enum Trama {
    LISA,
    RAYADA,
    LUNARES,
    ESTAMPADO,
}
